Fix double scrollbars when entering the page and filtering channels

--- a/jetpack/data/hub/style/style.css
+++ b/jetpack/data/hub/style/style.css
@@ -11,6 +11,9 @@ body, html {
 button{
     outline: 0 !important;
 }
+.left-pannel {
+    overflow-y: hidden;
+}
 .no-padding {
     padding: 0;
 }
